--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
 body {
-    /*
-    border: 1px solid black;
-    background-color: red;
-    */
+    
+    
+    background-color:rgb(153, 0, 0);
+    margin: 0, auto;
+    
+    
 }
 
 #canvas {
     border: 1px solid black;
+    position: relative;
+    left: 190px;
 }
 
